<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="md.endava.internship.budgetplanner.ui.login.LogInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.login.LogInFragment">

        <TextView
            android:id="@+id/tv_sign_up"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/auth_sign_up_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="105dp"
            android:fontFamily="sans-serif"
            android:text="@string/auth_access_account_text"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cards"
            android:layout_marginTop="172dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_background"
            android:clickable="false"
            android:alpha="@{viewModel.isValid ? 1.0f : 0.5f}"
            android:text="@string/auth_sign_in_button_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="#6D6789"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword"
            android:onTextChanged="@{(t,s,b,c)->viewModel.updatePassword(t)}"
            android:textColor="@color/white"
            android:textColorHint="#6D6789"
            app:layout_constraintBottom_toTopOf="@+id/b_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#6D6789"
            android:hint="@string/auth_login_hint"
            android:inputType="textWebEmailAddress"
            android:onTextChanged="@{(t,s,b,c)->viewModel.updateLogin(t)}"
            android:textColor="@color/white"
            android:textColorHint="#6D6789"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
